--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1033,6 +1033,10 @@ notes:
           \sqrt[5]{3a}
         }
       \\]
+    Back: |
+      \\[
+        2a
+      \\]
 - id: 1537488177651
   fields:
     Front: |
