--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1044,6 +1044,10 @@ notes:
       \\[
         3^{10} \times 9^8
       \\]
+    Back: |
+      \\[
+        3^{26}
+      \\]
 - id: 1537488177701
   fields:
     Front: |
