--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1055,6 +1055,10 @@ notes:
       \\[
         2^{16} \times 4^{10} \times 16^6
       \\]
+    Back: |
+      \\[
+        2^{60}
+      \\]
 - id: 1537488177751
   fields:
     Front: |
