--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1066,6 +1066,10 @@ notes:
       \\[
         \frac{x^9(2x)^4}{x^3}
       \\]
+    Back: |
+      \\[
+        16x^{10}
+      \\]
 - id: 1537488177801
   fields:
     Front: |
