--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1099,6 +1099,10 @@ notes:
       \\[
         \frac{x^{-1} + y^{-1}}{(x + y)^{-1}}
       \\]
+    Back: |
+      \\[
+        \frac{(x + y)^2}{xy}
+      \\]
 - id: 1537488177951
   fields:
     Front: |
