--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1110,6 +1110,10 @@ notes:
       \\[
         3^{-1/2}
       \\]
+    Back: |
+      \\[
+        \frac{1}{\sqrt{3}}
+      \\]
 - id: 1537488178002
   fields:
     Front: |
