--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1121,6 +1121,10 @@ notes:
       \\[
         96^{1/5}
       \\]
+    Back: |
+      \\[
+        2^5\sqrt{3}
+      \\]
 - id: 1537488178052
   fields:
     Front: |
