--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1132,6 +1132,10 @@ notes:
       \\[
         125^{2/3}
       \\]
+    Back: |
+      \\[
+        25
+      \\]
 - id: 1537488178101
   fields:
     Front: |
