--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1143,6 +1143,10 @@ notes:
       \\[
         64^{-4/3}
       \\]
+    Back: |
+      \\[
+        \frac{1}{256}
+      \\]
 - id: 1537488178151
   fields:
     Front: |
