--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1154,6 +1154,10 @@ notes:
       \\[
         (2x^2y^4)^{3/2}
       \\]
+    Back: |
+      \\[
+        2\sqrt{2}|x|^3y^6
+      \\]
 - id: 1537488178201
   fields:
     Front: |
