--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1165,6 +1165,10 @@ notes:
       \\[
         (x^{-5}y^3z^{10})^{-3/5}
       \\]
+    Back: |
+      \\[
+        \frac{x^3}{y^{9/5}z^6}
+      \\]
 - id: 1537488178251
   fields:
     Front: |
