--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1176,6 +1176,10 @@ notes:
       \\[
         \sqrt[5]{y^6}
       \\]
+    Back: |
+      \\[
+        y^{6/5}
+      \\]
 - id: 1537488178301
   fields:
     Front: |
