--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1187,6 +1187,10 @@ notes:
       \\[
         (\sqrt[4]{a})^3
       \\]
+    Back: |
+      \\[
+        a^{3/4}
+      \\]
 - id: 1537488178351
   fields:
     Front: |
