--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1198,6 +1198,10 @@ notes:
       \\[
         \frac{1}{(\sqrt{t})^5}
       \\]
+    Back: |
+      \\[
+        t^{-5/2}
+      \\]
 - id: 1537488178401
   fields:
     Front: |
