--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1224,6 +1224,10 @@ notes:
           s^{2/3}
         }}
       \\]
+    Back: |
+      \\[
+        \frac{t^{1/4}}{s^{1/24}}
+      \\]
 - id: 1537488178501
   fields:
     Front: |
