--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1257,6 +1257,10 @@ notes:
       \\[
         \frac{(1/\sqrt{x}) - 1}{x - 1}
       \\]
+    Back: |
+      \\[
+        \frac{-1}{\sqrt{x} + x}
+      \\]
 - id: 1537488178651
   fields:
     Front: |
