--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1283,6 +1283,10 @@ notes:
           h
         }
       \\]
+    Back: |
+      \\[
+        \frac{2}{\sqrt{2 + h} - \sqrt{2 - h}}
+      \\]
 - id: 1537488178767
   fields:
     Front: |
