--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1294,6 +1294,10 @@ notes:
       \\[
         \frac{2}{3 - \sqrt{5}}
       \\]
+    Back: |
+      \\[
+        \frac{3 + \sqrt{5}}{2}
+      \\]
 - id: 1537488178827
   fields:
     Front: |
