--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1347,6 +1347,8 @@ notes:
       \\[
         \sqrt{x^2 + 4} = |x| + 2
       \\]
+    Back: |
+      False
 - id: 1537488179084
   fields:
     Front: |
