--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -1374,6 +1374,8 @@ notes:
       \\[
         \frac{x}{x + y} = \frac{1}{1 + y}
       \\]
+    Back: |
+      False
 - id: 1537488179234
   fields:
     Front: |
