--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/RoA/00_arithmetic-operations.yml
@@ -4,7 +4,7 @@ defaults:
   tags:
   - Textbooks
   - Math
-  - Calculus
+  - Algebra
   - Calculus-ConceptsAndContexts
   - CCAC-ReviewOfAlgebra
   - CCAC-RoA-ArithmeticOperations
