Add definition of statistical inference

--- a/Coursework/Coursera/DataScience/06-StatisticalInference/060101_mod1_text-notes.yml
+++ b/Coursework/Coursera/DataScience/06-StatisticalInference/060101_mod1_text-notes.yml
@@ -13,3 +13,10 @@ comment: |
   #
   #
   #
+notes:
+- id: 0
+  fields:
+    Front: |
+      How do we define _statistical inference?_
+    Back: |
+      **Statistical inference:** the process of generating conclusions about a population from a noisy sample.
